new check point

--- a/data/k2_dir/COMBINE.ipynb
+++ b/data/k2_dir/COMBINE.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/acevedo/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 216, got 192\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +57,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/acevedo/Desktop/Current_GAN/MicrobiotaGAN/data/k2_dir\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +92,9 @@
     "noisy_high_train = noisify(train_set, high_noise)\n",
     "noisy_low_train = noisify(train_set, low_noise)\n",
     "\n",
-    "noisy_high_test = noisify(test_set, high_noise)\n",
-    "noisy_low_test = noisify(test_set, low_noise)"
+    "# Recall this set is smallar\n",
+    "noisy_high_test = noisify(test_set, high_noise[50000:60000,:])\n",
+    "noisy_low_test = noisify(test_set, low_noise[50000:60000,:])"
    ]
   },
   {
@@ -92,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
